application/static/css/mockups/flinders-street/platform.css
div.fullMessage {
  width: var(--width);
  height: var(--height);
  background-color: #000000;
  color: #ffffff;

  display: flex;
  align-items: center;
  justify-content: center;
}

div.fullMessage img {
  margin-top: calc(0.005 * var(--height));
  margin-right: calc(0.05 * var(--height));
  height: calc(0.12 * var(--height));
}

div.fullMessage p {
  font-size: calc(0.08 * var(--height));
}

div.content {
  background-color: #f0f0f0 !important;
}

div.topLineBanner {
  width: calc(var(--width) * 0.979);
  height: calc(var(--height) * 0.05);
  border-radius: calc(var(--width) * 0.005);
  margin-top: calc(var(--height) * 0.01);
}

div.message {
  width: var(--width);
  height: calc(var(--height) * 0.79);

  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

div.message img {
  height: calc(var(--height) * 0.3);
}

div.message p {
  font-size: calc(var(--height) * 0.09);
}

div.firstDeparture {
  display: flex;
  align-items: center;
  flex-direction: column;
}

div.firstDepartureInfo {
  width: calc(var(--width) * 0.979);
  height: calc(var(--height) * 0.2);

  display: flex;
  flex-direction: column;
}

div.firstDepartureInfo div.top {
  height: calc(var(--height) * 0.13);

  display: flex;
  flex-direction: row;
  align-items: center;
}

span.firstStoppingType {
  font-size: calc(var(--height) * 0.06);
  margin-top: calc(var(--height) * -0.01);
  white-space: nowrap;
}

span.firstDepartureTime {
  font-size: calc(var(--height) * 0.08);
  font-family: "NetworkSansRegular";
}

span.firstDestination {
  font-size: calc(var(--height) * 0.11);

  font-family: "NetworkSansBold";
  font-weight: 800;
  letter-spacing: calc(var(--width) * -0.003);
  margin-left: calc(var(--width) * 0.015);
}

div.minutesToDeparture {
  margin-left: auto;
  background-color: #000000;
  color: #ffffff;

  width: calc(var(--width) * 0.2);
  height: calc(var(--height) * 0.1);
  border-radius: calc(var(--width) * 0.005);

  display: flex;
  align-items: center;
  justify-content: center;

}

div.minutesToDeparture span {
  font-size: calc(var(--height) * 0.08);
  font-family: "NetworkSansRegular";
}

div.stoppingPattern {
  box-sizing: border-box;
  border-top: solid calc(var(--height) * 0.005) black;

  display: flex;
  justify-content: space-between;
  background-color: #f0f0f0;
  width: var(--width);

  height: calc(var(--height) * 0.59);
}

div.stopsColumn {
  margin-left: calc(var(--width) * 0.01);
}

div.stopsColumn.column-2 {
  width: calc(var(--width) / 2);
}

div.stopsColumn.column-3 {
  width: calc(var(--width) / 3);
}

div.stopsColumn.column-4 {
  width: calc(var(--width) / 4);
}

div.stationRow {
  display: flex;
  align-items: center;
}

div.stationRow p {
  font-size: calc(var(--height) * 0.04);
  padding-top: calc(var(--height) * 0.001);
  padding-bottom: calc(var(--height) * 0.001);
  padding-left: calc(var(--height) * 0.01);
  padding-right: calc(var(--height) * 0.01);

  margin: 0;
  margin-left: calc(var(--height) * 0.01);
  border-radius: calc(var(--height) * 0.005);
  white-space: nowrap;
}

div.stationRow p.express {
  color: #707070;
}

div.stopsColumn {
  --arrow-height: calc(var(--width) * 0.0205);
  --row-height: calc(var(--width) * 0.0205 / 0.656);
}
div.stationRow img {
  width: calc(var(--width) * 0.0205);
  image-rendering: crisp-edges;
}

div.stopsColumn.row-8.column-1 div.stationRow p {
  font-size: calc(var(--height) * 0.05);
}
div.stopsColumn.row-8.column-1 {
  --arrow-height: calc(var(--width) * 0.024);
  --row-height: calc(var(--width) * 0.024 / 0.656);
}
div.stopsColumn.row-8.column-1 div.stationRow img {
  width: calc(var(--width) * 0.024);
}

div.stopsColumn.row-10 div.stationRow p {
  font-size: calc(var(--height) * 0.033);
}
div.stopsColumn.row-10 {
  --arrow-height: calc(var(--width) * 0.018);
  --row-height: calc(var(--width) * 0.018 / 0.656);
}
div.stopsColumn.row-10 div.stationRow img {
  width: calc(var(--width) * 0.018);
}

div.stopsColumn.row-11 div.stationRow p {
  font-size: calc(var(--height) * 0.033);
}
div.stopsColumn.row-11 {
  --arrow-height: calc(var(--width) * 0.0165);
  --row-height: calc(var(--width) * 0.0165 / 0.656);
}
div.stopsColumn.row-11 div.stationRow img {
  width: calc(var(--width) * 0.0165);
}

div.expressArrow {
  position: absolute;
  height: 0;
  margin-left: calc(var(--arrow-height) * -0.15);
}

div.expressArrow img {
  position: absolute;
  height: calc(var(--arrow-height) * 1.3 * 0.656);
}

div.expressArrow img:nth-child(1) {
  z-index: 2;
}

div.expressArrow img:nth-child(2) {
  margin-top: calc(var(--arrow-height) * 0.4 * 0.656);
  filter: invert(94.1%);
  z-index: 1;
}

div.bottomRow {
  width: var(--width);
  border-top: solid calc(var(--height) * 0.0075) black;
  height: calc(var(--height) * 0.15);
  display: flex;
}

div.nextDepartures {
  width: calc(var(--width) * 0.77);
}

div.nextDeparture {
  height: calc(var(--height) * 0.07);
  display: flex;
  align-items: center;
}

div.nextDeparture div.lineColour {
  width: calc(var(--width) * 0.008);
  height: calc(var(--height) * 0.055);
  border-radius: calc(var(--width) * 0.003);
  margin-left: calc(var(--width) * 0.005);
}

div.nextDeparture span.scheduledDepartureTime {
  margin-left: calc(var(--width) * 0.01);
  width: calc(var(--width) * 0.11);
  font-size: calc(var(--height) * 0.04);
  font-family: "NetworkSansRegular";
}

div.nextDeparture span.destination {
  width: calc(var(--width) * 0.18);
  font-size: calc(var(--height) * 0.05);
  font-family: "NetworkSansBold";
  white-space: nowrap;
}

div.nextDeparture span.stoppingType {
  margin-left: calc(var(--width) * 0.02);
  font-size: calc(var(--height) * 0.03);
}

div.nextDeparture div.minutesToDeparture {
  width: calc(var(--width) * 0.1);
  height: calc(var(--height) * 0.06);
  border-radius: calc(var(--width) * 0.005);
  margin-right: calc(var(--width) * 0.02);
}

div.nextDeparture div.minutesToDeparture span {
  font-size: calc(var(--height) * 0.043);
}

div.greyLine {
  height: calc(var(--height) * 0.004);
  width: calc(var(--width) * 0.75);
  background-color: #000000;
}

div.clock {
  width: calc(var(--width) * 0.23);
  height: calc(var(--height) * 0.15);
  background-color: #000000;
  color: #ffffff;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: calc(var(--height) * 0.07);
}

div.clock span {
  margin-top: calc(var(--height) * -0.00375);
}

